@@ -85,6 +85,9 @@ CSpectrum2DmW::CSpectrum2DmW(STD(string)              name,
   CreateChannels();
 }
 
+CSpectrum2DmW::~CSpectrum2DmW() {}
+
+
 ///////////////////////////////////////////////////////////////////
 ///////////////// Virtual function overrides //////////////////////
 ///////////////////////////////////////////////////////////////////
